--- a/css/style.css
+++ b/css/style.css
@@ -429,31 +429,21 @@ a.boxclose{
 }
 /*----//fea-video----*/
 /*----blog-info----*/
-.blog-info h3{
-	font-size: 2em;
-	color: #000;
-	font-family: 'pt_sansbold';
-}
-.blog-info h3 span{
-	height: 3px;
-	width: 2.5%;
-	background:#E8432E;
-	display: block;
-}
+
 .blog-info {
-	padding: 4.5em 0;
+	
+	padding: 4em 0;
+	background: url(../images/people-say-bg.jpg) no-repeat 0px 0px;
+	background-size: 100% 100%;
+	
 }
 /*----*/
 .item-left{
-	width: 24%;
+	width: 60%;
 	float: left;
 	padding: 0 2% 0 0;
 }
-.item-left h4{
-	color: #000;
-	font-size: 1.5em;
-	margin: 0.5em 0 0.7em 0;
-}
+
 .item-left p{
 	color: #B9B9B9;
 	font-size: 0.9em;
@@ -461,14 +451,7 @@ a.boxclose{
 	line-height: 1.5em;
 	margin: 2em 0 3em;
 }
-.item-left a span{
-	width:16px;
-	height:14px;
-	background: url(../images/image-sprite.png) no-repeat -90px -60px;
-	display:inline-block;
-	vertical-align:middle;
-	margin-right:0.5em;
-}
+
 .item-left a{
 	color:#000;
 	font-size: 1em;
@@ -478,45 +461,24 @@ a.boxclose{
 	-moz-transition:0.5s all;
 	-o-transition:0.5s all;
 }
+
 .item-left a:hover{
 	color:#E8432E;
 }
+
 .item-center{
-	width:50%;
-	float:left;
+	width:60%;
+	float: left;
+	background-color: #E8432E;
+	clear: left;
+
 }
 .item-right{
 	float:right;
 	width:18%;
 	padding:0 2%;
 }
-.blog-post-info-left{
-	float:left;
-	width:15%;
-}
-.blog-post-info-left span{
-	display: block;
-	color: #7F7F7F;
-	text-transform: uppercase;
-	text-align: center;
-	font-size: 1em;
-	border-bottom: 1px solid #eee;
-	padding: 1em 0;
-}
-.blog-post-info-left span label{
-	display: block;
-	font-family: 'pt_sansbold';
-	font-size: 2.2em;
-	line-height: 0.8em;
-	margin-top: 0.1em;
-	color: rgba(127, 127, 127, 0.64);
-}
-.blog-post-info-right{
-	float: right;
-	width: 82%;
-	border-left: 2px solid #F1F1F1;
-	padding-left: 2%;
-}
+
 .more-info{
 	color: #000;
 	transition: 0.5s all;
@@ -537,57 +499,7 @@ a.boxclose{
 	vertical-align: middle;
 	margin-right: 0.5em;
 }
-.blog-post-info-left a{
-	color: #A8A4A4;
-	text-align: center;
-	display: block;
-	padding: 1em 0;
-	transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-}
-.blog-post-info-left a small{
-	width: 18px;
-	height: 16px;
-	background: url(../images/image-sprite.png) no-repeat -30px -4px;
-	display: block;
-	margin: 0 auto 0.5em;
-}
-.blog-post-info-left a:hover{
-	color:#000;
-}
-.blog-post-info-left a:hover  small{
-	background: url(../images/image-sprite.png) no-repeat -55px -5px;
-}
-.blog-post-info-right h4 a{
-	color: #000;
-	font-size: 1.5em;
-	margin: 0.5em 0 0.2em 0;
-	display: block;
-}
-.stats {
-	margin-bottom: 0.5em;
-}
-.blog-post-info-right li{
-	float:left;
-}
-.blog-post-info-right li a{
-	color: #B9B9B9;
-	font-size: 0.9em;
-	padding: 0 0.3em;
-	transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-} 
-.blog-post-info-right li a:hover{
-	color:#000;
-}
-.blog-post-info-right li span{
-	color: #B9B9B9;
-	margin-right: 0.3em;
-}
+
 .post-text{
 	color: #A7A7A7;
 	font-size: 0.9em;
@@ -637,131 +549,7 @@ a.boxclose{
 	background: url(../images/image-sprite.png) no-repeat 7px 12px;
 }
 /*---//featured-works---*/
-/*--text-slider--*/
-.test-monials-grids{
-	padding: 4em 0;
-	background: url(../images/people-say-bg.jpg) no-repeat 0px 0px;
-	background-size: 100% 100%;
-}
-.test-monials {
-	background: rgba(245, 245, 245, 0.34);
-	border-bottom: 1px solid rgba(54, 59, 63, 0.07);
-	padding-bottom: 3px;
-}
-.test-monials h3{
-	font-size: 2em;
-	color: #E14E3E;
-	margin-bottom: 0px;
-	text-align: center;
-	font-family: 'bebasregular';
-}
-.test-monials h3 span{
-	color:#363B3F;
-}
-.slider {
-    position: relative;
-    zoom: 1;
-}
-.slider-nav {
-    position: absolute;
-    zoom: 1;
-    width: 100%;
-    top: 0;
-    left: 0;
-}
-.arrow {
-    width: 42px;
-    height: 175px;
-    position: absolute;
-    zoom: 1;
-    top: 0;
-}
-.arrow span {
-    display: block;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-}
-.arrow.disabled {
-    opacity: 0.3;
-    cursor: default;
-}
-.arrow-left {
-    left: 0;
-}
-.arrow-right {
-    right: 0;
-}
-.slider-mask-wrap {
-    margin: 0 48px;
-}
-.slider-mask {
-    overflow: hidden;
-    position: relative;
-    zoom: 1;
-}
-.slider-target {
-    width: 2000px;
-    margin: 0 auto;
-}
-.slider ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-.slider li {
-    float: left;
-    margin: 0;
-    padding: 0;
-}
-.slider .inner p{
-    padding: 1.5em 1em;
-	height: 80%;
-	width: 100%;
-	font-size: 1.2em;
-	color: #FFFFFF;
-	display: block;
-	text-align: center;
-	margin: 0 auto;
-	line-height: 1.6em;
-	font-family: 'Maven Pro', sans-serif;
-}
-.test-auther {
-	text-align: center;
-	margin-top: 0em;
-	background: url(../images/test-bg.png) no-repeat 50% 50%;
-	padding-top:0em;
-}
-.test-auther p a{
-	font-size: 0.9em;
-	color: #FFFFFF;
-	font-family: 'pt_sansregular';
-	text-align: center;
-	margin-bottom: 0.8em;
-	transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-}
-.test-auther p a:hover{
-	color:#E8432E;
-}
-.test-auther p label{
-	font-size: 0.875em;
-	line-height: 1.5em;
-	color: #5c5c5c;
-	 font-family: 'pt_sansregular';
-}
-.examples{
-   padding: 0em 0 1em 0;
-}
-#menu span {
-    white-space: nowrap;
-}
-#selector {
-	text-align: center;
-	margin: 3em 0 1em;
-}
+
 /* selector styling */
 #selector a {
 	display: block;
@@ -990,12 +778,12 @@ a.boxclose{
 }
 /*---//ptsans_regular_macroman---*/
     #owl-demo .item{
-       margin: 0.5em;
+       margin: 2em;
 		transition: 0.5s all;
 		-webkit-transition: 0.5s all;
 		-moz-transition: 0.5s all;
-		-o-transition: 0.5s all;
-		padding: 1em;
+		-o-transition: 0.0s all;
+		padding: 0em;
 		background: #fff;
     }
     #owl-demo .item img{
@@ -1101,7 +889,7 @@ a.boxclose{
 	content: ".";
 	display: block;
 	clear: both;
-	visibility: hidden;
+	visibility: visible;
 	line-height: 0;
 	height: 0;
 }
@@ -1122,13 +910,7 @@ a.boxclose{
 	position: relative;
 	width: 100%;
 }
-.owl-carousel .owl-wrapper-outer.autoHeight{
-	-webkit-transition: height 500ms ease-in-out;
-	-moz-transition: height 500ms ease-in-out;
-	-ms-transition: height 500ms ease-in-out;
-	-o-transition: height 500ms ease-in-out;
-	transition: height 500ms ease-in-out;
-}
+
 	
 .owl-carousel .owl-item{
 	float: left;
@@ -1218,86 +1000,7 @@ a.boxclose{
  * 	//Core Owl Carousel CSS File
  *	v1.24
  */
-/* Demo */
-.wmuSlider,
-.wmuGallery {
-    margin-bottom: 20px;
-}
 
-/* mwuSlider */
-.wmuSlider {
-    position: relative;
-	overflow: hidden;
-	margin: 4em 0 2em;
-}
-.wmuSlider .wmuSliderWrapper {
-    display: none;
-}
-.wmuSlider .wmuSliderWrapper article {
-    position: relative;
-	text-align: center;
-	padding: 0 0em;
-}
-.wmuSlider .wmuSliderWrapper article img {
-    max-width: 100%;
-    width: auto;
-    height: auto;
-}
-
-/* mwuGallery */
-.wmuGallery .wmuGalleryImage {
-    position: relative;
-    text-align: center;
-}
-.wmuGallery .wmuGalleryImage img {
-    max-width: 100%;
-    width: auto;
-    height: auto;
-}
-
-/* Default Skin */
-.wmuGallery .wmuGalleryImage {
-    margin-bottom: 10px;
-}
-.wmuSliderPrev, .wmuSliderNext {
-    position: absolute;
-    width: 40px;
-    height: 61px;
-    text-indent: -9999px;
-    background: url(../images/image-sprite.png) no-repeat -411px -10px;
-    top: 50%;
-    margin-top: -40px;
-    z-index: 2;
-    cursor:pointer;
-}
-.wmuSliderPrev {
-    background: url(../images/image-sprite.png) no-repeat -453px -10px;
-    left: 20px;
-}
-.wmuSliderNext {
-    right: 20px;
-}
-.wmuSliderPagination {
-   z-index: 2;
-	position: absolute;
-	left: 17%;
-	top: 57%;
-}
-.wmuSliderPagination li {
-    float: left;
-    margin: 0 5px 0 0;
-    list-style-type: none;
-}
-.wmuSliderPagination a {
-    display: block;
-    text-indent: -9999px;
-    width: 10px;
-    height: 10px;
-    background: url(../images/sprites.png) no-repeat 0 -80px;
-}
-.wmuSliderPagination a.wmuActive {
-    background-position: -10px -80px;
-}
 /*--//--*/
 /*--colorswitcher--*/
 .colorswitcher ul li{
@@ -2020,7 +1723,10 @@ a.boxclose{
 		font-size: 1.5em;
 	}
 	.blog-info {
-		padding: 2em 0;
+	padding: 4em 0;
+	background: url(../images/people-say-bg.jpg) no-repeat 0px 0px;
+	background-size: 100% 100%;
+		
 	}
 	.get-intouch-center-form h5 {
 		margin: 0.3em 0 00em 0;
@@ -2127,7 +1833,7 @@ a.boxclose{
 	}
 	#owl-demo .item {
 		margin: 0em;
-		padding:1em 0;
+		padding:0em 0;
 	}
 	.item-center {
 		width: 100%;
@@ -2204,9 +1910,7 @@ a.boxclose{
 	.menu_box_list li a {
 		font-size: 1.5em;
 	}
-	.blog-info {
-		padding: 1em 0;
-	}
+	
 	.get-intouch-center-form h5 {
 		margin: 0.3em 0 00em 0;
 	}
@@ -2249,9 +1953,7 @@ a.boxclose{
 	.fea-video a {
 		margin-bottom: 0.5em;
 	}
-	.blog-info h3 {
-		font-size: 1.5em;
-	}
+	
 	.item-left h4 {
 		color: #000;
 		font-size: 1.2em;
@@ -2260,16 +1962,5 @@ a.boxclose{
 	.owl-controls .owl-buttons div {
 		display:none;
 	}
-	.blog-post-info-left {
-		width: 25%;
-	}
-	.blog-post-info-right {
-		width: 71%;
-	}
-	.blog-post-info-right h4 a {
-		font-size: 1.2em;
-	}
-	.blog-info h3 span {
-		width: 5.5%;
-	}
+	
 }
